--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
 
 /* Add these styles to your CSS */
 
-@keyframes fadeIn {
+/* @keyframes fadeIn {
   from {
     opacity: 0;
   }
@@ -53,12 +53,12 @@ body {
 }
 
 .fade-in {
-  animation: fadeIn 0.5s ease-in-out; /* Adjust the duration and easing as needed */
+  animation: fadeIn 0.5s ease-in-out;
 }
 
 .fade-out {
-  animation: fadeOut 0.5s ease-in-out; /* Adjust the duration and easing as needed */
-}
+  animation: fadeOut 0.5s ease-in-out;
+} */
 
 .animation > div > div {
   padding: 0.25rem 0rem;
