--- a/app/globals.css
+++ b/app/globals.css
@@ -30,129 +30,223 @@ body {
   width: 100%;
 }
 
-/* Add these styles to your CSS */
+.content {
+  height: 135px;
+  overflow: hidden;
+  /* background-color: turquoise; */
+}
 
-/* @keyframes fadeIn {
-  from {
-    opacity: 0;
+.content__container {
+  font-weight: 500;
+  overflow: hidden;
+  font-size: 45px;
+  color: #000000;
+}
+
+.content__container__list {
+  margin-top: 0;
+  text-align: left;
+  list-style: none;
+}
+
+.content__container__list__item {
+  line-height: 55px;
+  margin: 0;
+}
+
+/* * Mobile devices media query * */
+
+/* ! for Small devices ! */
+
+@media only screen and (max-width: 375px) {
+  .content {
+    height: 120px;
+    overflow: hidden;
+    /* background-color: turquoise; */
   }
-
-  to {
-    opacity: 1;
+  .content__container {
+    font-weight: 500;
+    overflow: hidden;
+    font-size: 27px;
+    color: #000000;
   }
-}
-
-@keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-
-  to {
-    opacity: 0;
-  }
-}
-
-.fade-in {
-  animation: fadeIn 0.5s ease-in-out;
-}
-
-.fade-out {
-  animation: fadeOut 0.5s ease-in-out;
-} */
-
-.animation > div > div {
-  padding: 0.25rem 0rem;
-  height: 8.81rem;
-  margin-bottom: 5.81rem;
-  display: inline-block;
-}
-@media only screen and (min-width: 801px) and (max-width: 1024px) {
-  .animation > div > div {
-    height: 8.81rem;
-    padding: 0.25rem 0rem;
-    margin-bottom: 6.31rem;
-    display: inline-block;
-  }
-}
-@media only screen and (min-width: 768px) and (max-width: 800px) {
-  .animation > div > div {
-    height: 8.81rem;
-    padding: 0.25rem 0rem;
-    margin-bottom: 7.31rem;
-    display: inline-block;
-  }
-}
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-  .animation > div > div {
-    height: 8.81rem;
-    padding: 0.25rem 0rem;
-    margin-bottom: 5rem;
-    display: inline-block;
-  }
-}
-@media only screen and (min-width: 417px) and (max-width: 480px) {
-  .animation > div > div {
-    height: 9.81rem;
-    padding: 0.75rem 0rem;
-    margin-bottom: 4.35rem;
-
-    display: inline-block;
-  }
-}
-@media only screen and (max-width: 417px) {
-  .animation > div > div {
-    height: 9.81rem;
-    padding: 0.75rem 0rem;
-    margin-bottom: 6.01rem;
-    display: inline-block;
-  }
-}
-
-.animation div:first-child {
-  animation: text-animation 16s infinite;
-}
-
-@keyframes text-animation {
-  0% {
+  .content__container__list {
     margin-top: 0;
+    text-align: center;
+    list-style: none;
   }
-  7.14% {
+
+  .content__container__list__item {
+    line-height: 35px;
+    margin: 0;
+  }
+}
+
+/* ! for medium devices ! */
+
+@media only screen and (min-width: 375px) and (max-width: 480px) {
+  .content {
+    height: 120px;
+    overflow: hidden;
+    /* background-color: turquoise; */
+  }
+  .content__container {
+    font-weight: 500;
+    overflow: hidden;
+    font-size: 32px;
+    color: #000000;
+  }
+  .content__container__list {
     margin-top: 0;
+    text-align: center;
+    list-style: none;
   }
-  14.28% {
-    margin-top: -6rem;
+
+  .content__container__list__item {
+    line-height: 40px;
+    margin: 0;
   }
-  21.42% {
-    margin-top: -6rem;
+}
+/* ! for large devices ! */
+
+@media only screen and (min-width: 480px) and (max-width: 768px) {
+  .content {
+    height: 120px;
+    overflow: hidden;
+    /* background-color: turquoise; */
   }
-  28.56% {
-    margin-top: -16rem;
+  .content__container {
+    font-weight: 500;
+    overflow: hidden;
+    font-size: 40px;
+    color: #000000;
   }
-  35.7% {
-    margin-top: -16rem;
-  }
-  42.84% {
-    margin-top: -27rem;
-  }
-  49.98% {
-    margin-top: -27rem;
-  }
-  57.12% {
-    margin-top: -16rem;
-  }
-  64.26% {
-    margin-top: -16rem;
-  }
-  71.4% {
-    margin-top: -6rem;
-  }
-  78.54% {
-    margin-top: -6rem;
-  }
-  92.82% {
+  .content__container__list {
     margin-top: 0;
+    text-align: center;
+    list-style: none;
   }
+
+  .content__container__list__item {
+    line-height: 48px;
+    margin: 0;
+  }
+}
+
+/* * Tablet devices media query * */
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+  .content {
+    height: 150px;
+    overflow: hidden;
+    /* background-color: turquoise; */
+  }
+  .content__container {
+    font-weight: 500;
+    overflow: hidden;
+    font-size: 36px;
+    color: #000000;
+  }
+  .content__container__list {
+    margin-top: 0;
+    text-align: left;
+    list-style: none;
+  }
+
+  .content__container__list__item {
+    line-height: 44px;
+    margin: 0;
+  }
+}
+
+/* * Laptop devices media query * */
+/* ! for medium devices ! */
+
+@media only screen and (min-width: 1024px) and (max-width: 1174px) {
+  .content {
+    height: 150px;
+    overflow: hidden;
+    /* background-color: turquoise; */
+  }
+  .content__container {
+    font-weight: 500;
+    overflow: hidden;
+    font-size: 40px;
+    color: #000000;
+  }
+  .content__container__list {
+    margin-top: 0;
+    text-align: left;
+    list-style: none;
+  }
+
+  .content__container__list__item {
+    line-height: 44px;
+    margin: 0;
+  }
+}
+
+/* ! for large devices ! */
+
+@media only screen and (min-width: 1174px) and (max-width: 1440px) {
+  .content {
+    height: 150px;
+    overflow: hidden;
+    /* background-color: turquoise; */
+  }
+  .content__container {
+    font-weight: 500;
+    overflow: hidden;
+    font-size: 42px;
+    color: #000000;
+  }
+  .content__container__list {
+    margin-top: 0;
+    text-align: left;
+    list-style: none;
+  }
+
+  .content__container__list__item {
+    line-height: 46px;
+    margin: 0;
+  }
+}
+
+@keyframes change {
+  0%,
+  12.66%,
   100% {
-    margin-top: 0;
+    transform: translate3d(0, 0, 0);
   }
+  16.66%,
+  29.32% {
+    transform: translate3d(0, -25%, 0);
+  }
+  33.32%,
+  45.98% {
+    transform: translate3d(0, -50%, 0);
+  }
+  49.98%,
+  62.64% {
+    transform: translate3d(0, -75%, 0);
+  }
+  66.64%,
+  79.3% {
+    transform: translate3d(0, -50%, 0);
+  }
+  83.3%,
+  95.96% {
+    transform: translate3d(0, -25%, 0);
+  }
+}
+
+.content__container__list {
+  animation-name: change;
+  animation-duration: 16s;
+  animation-iteration-count: infinite;
+}
+
+.content__container__list__item {
+  animation-name: opacity;
+  animation-duration: 16s;
+  animation-iteration-count: infinite;
 }
