--- a/app/globals.css
+++ b/app/globals.css
@@ -250,3 +250,96 @@ body {
   animation-duration: 16s;
   animation-iteration-count: infinite;
 }
+
+.container {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+}
+
+.container.expanded {
+  max-height: 400px; /* Set to your desired expanded height */
+}
+
+.custom-select::after {
+  content: url("./assets/icons/scroll.png"); /* Specify the path to your icon */
+  position: absolute;
+  top: 50%;
+  right: 20px; /* Adjust this value to position the icon */
+  transform: translateY(-50%);
+  pointer-events: none;
+}
+.custom-select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  background-image: url("./assets/icons/scroll.png"); /* Specify the path to your icon */
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 20px; /* Adjust the size of the icon */
+}
+
+/* Custom styling for checkbox */
+
+.checkbox-wrapper-40 {
+  --borderColor: ##afafaf;
+  --arrow: #ffffff;
+  --borderWidth: 0.125em;
+  --background: #1e1e1e;
+}
+
+.checkbox-wrapper-40 label {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.checkbox-wrapper-40 input[type="checkbox"] {
+  -webkit-appearance: none;
+  appearance: none;
+  vertical-align: middle;
+  background: var(--background);
+  font-size: 1.8em;
+  border-radius: 0.125em;
+  display: inline-block;
+  border: var(--borderWidth) solid var(--background);
+  width: 1em;
+  height: 1em;
+  position: relative;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:before,
+.checkbox-wrapper-40 input[type="checkbox"]:after {
+  content: "";
+  position: absolute;
+  background: var(--arrow);
+  width: calc(var(--borderWidth) * 3);
+  height: var(--borderWidth);
+  top: 50%;
+  left: 10%;
+  transform-origin: left center;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:before {
+  transform: rotate(45deg)
+    translate(calc(var(--borderWidth) / -2), calc(var(--borderWidth) / -2)) scaleX(0);
+  transition: transform 200ms ease-in 200ms;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:after {
+  width: calc(var(--borderWidth) * 5);
+  transform: rotate(-45deg) translateY(calc(var(--borderWidth) * 2)) scaleX(0);
+  transform-origin: left center;
+  transition: transform 200ms ease-in;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:checked:before {
+  transform: rotate(45deg)
+    translate(calc(var(--borderWidth) / -2), calc(var(--borderWidth) / -2)) scaleX(1);
+  transition: transform 200ms ease-in;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:checked:after {
+  width: calc(var(--borderWidth) * 5);
+  transform: rotate(-45deg) translateY(calc(var(--borderWidth) * 2)) scaleX(1);
+  transition: transform 200ms ease-out 200ms;
+}
+.checkbox-wrapper-40 input[type="checkbox"]:focus {
+  outline: calc(var(--borderWidth) / 2) dotted rgba(0, 0, 0, 0.25);
+}
