--- a/app/globals.css
+++ b/app/globals.css
@@ -262,7 +262,7 @@ body {
 }
 
 .custom-select::after {
-  content: url("./assets/icons/scroll.png"); /* Specify the path to your icon */
+  content: url("/assets/icons/scroll.png"); /* Specify the path to your icon */
   position: absolute;
   top: 50%;
   right: 20px; /* Adjust this value to position the icon */
@@ -274,7 +274,7 @@ body {
   -moz-appearance: none;
   appearance: none;
   background-color: transparent;
-  background-image: url("./assets/icons/scroll.png"); /* Specify the path to your icon */
+  background-image: url("/assets/icons/scroll.png"); /* Specify the path to your icon */
   background-repeat: no-repeat;
   background-position: right 10px center;
   background-size: 20px; /* Adjust the size of the icon */
@@ -283,10 +283,11 @@ body {
 /* Custom styling for checkbox */
 
 .checkbox-wrapper-40 {
-  --borderColor: ##afafaf;
+  --borderColor: #afafaf;
   --arrow: #ffffff;
   --borderWidth: 0.125em;
-  --background: #1e1e1e;
+  --backgroundUnchecked: #ffffff; /* Background color when checkbox is not selected */
+  --backgroundChecked: #000000; /* Background color when checkbox is selected */
 }
 
 .checkbox-wrapper-40 label {
@@ -299,47 +300,121 @@ body {
   -webkit-appearance: none;
   appearance: none;
   vertical-align: middle;
-  background: var(--background);
+  background-color: var(--backgroundUnchecked); /* Set default background color */
   font-size: 1.8em;
   border-radius: 0.125em;
   display: inline-block;
-  border: var(--borderWidth) solid var(--background);
+  border: var(--borderWidth) solid var(--backgroundChecked);
   width: 1em;
   height: 1em;
   position: relative;
 }
+
+.checkbox-wrapper-40 input[type="checkbox"]:checked {
+  background-color: var(--backgroundChecked); /* Change background color when checked */
+}
+
+.checkbox-wrapper-40 input[type="checkbox"]:before {
+  background: var(--arrow);
+}
+
+.checkbox-wrapper-40 input[type="checkbox"]:after {
+  background: var(--backgroundUnchecked); /* Set default background color */
+}
+
 .checkbox-wrapper-40 input[type="checkbox"]:before,
 .checkbox-wrapper-40 input[type="checkbox"]:after {
   content: "";
   position: absolute;
-  background: var(--arrow);
+  background: var(--arrow); /* Set background color for checked state */
   width: calc(var(--borderWidth) * 3);
   height: var(--borderWidth);
   top: 50%;
   left: 10%;
   transform-origin: left center;
 }
+
 .checkbox-wrapper-40 input[type="checkbox"]:before {
   transform: rotate(45deg)
     translate(calc(var(--borderWidth) / -2), calc(var(--borderWidth) / -2)) scaleX(0);
   transition: transform 200ms ease-in 200ms;
 }
+
 .checkbox-wrapper-40 input[type="checkbox"]:after {
   width: calc(var(--borderWidth) * 5);
   transform: rotate(-45deg) translateY(calc(var(--borderWidth) * 2)) scaleX(0);
   transform-origin: left center;
   transition: transform 200ms ease-in;
 }
+
 .checkbox-wrapper-40 input[type="checkbox"]:checked:before {
   transform: rotate(45deg)
     translate(calc(var(--borderWidth) / -2), calc(var(--borderWidth) / -2)) scaleX(1);
   transition: transform 200ms ease-in;
 }
+
 .checkbox-wrapper-40 input[type="checkbox"]:checked:after {
   width: calc(var(--borderWidth) * 5);
   transform: rotate(-45deg) translateY(calc(var(--borderWidth) * 2)) scaleX(1);
   transition: transform 200ms ease-out 200ms;
 }
-.checkbox-wrapper-40 input[type="checkbox"]:focus {
-  outline: calc(var(--borderWidth) / 2) dotted rgba(0, 0, 0, 0.25);
+
+/* *********************************** */
+
+/* index.css */
+.rainbow {
+  position: relative;
+  z-index: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%; /* Make the button round */
+  overflow: hidden;
+  padding: 27px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rainbow::before {
+  content: "";
+  position: absolute;
+  z-index: -2;
+  left: -50%;
+  top: -50%;
+  width: 200%;
+  height: 200%;
+  background-repeat: no-repeat;
+  background-size: 50% 50%, 50% 50%;
+  background-position: 0 0, 100% 0, 100% 100%, 0 100%;
+  background-image: linear-gradient(#f5f5f5, #f5f5f5), linear-gradient(#4169e1, #4169e1),
+    linear-gradient(#f5f5f5, #f5f5f5), linear-gradient(#4169e1, #4169e1);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.rainbow:hover::before {
+  opacity: 1;
+  animation: rotate 4s linear infinite;
+}
+
+.rainbow::after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 6px;
+  top: 6px;
+  width: calc(100% - 12px);
+  height: calc(100% - 12px);
+  background: white;
+  border-radius: 50%;
+}
+
+.rainbow:hover::after {
+  transform: rotate(1turn);
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(1turn);
+  }
 }
