--- a/app/globals.css
+++ b/app/globals.css
@@ -385,7 +385,7 @@ body {
   height: 200%;
   background-repeat: no-repeat;
   background-size: 50% 50%, 50% 50%;
-  background-position: 0 0, 100% 0, 100% 100%, 0 100%;  
+  background-position: 0 0, 100% 0, 100% 100%, 0 100%;
   background-image: linear-gradient(#f5f5f5, #f5f5f5), linear-gradient(#4169e1, #4169e1),
     linear-gradient(#f5f5f5, #f5f5f5), linear-gradient(#4169e1, #4169e1);
   opacity: 0;
@@ -419,28 +419,33 @@ body {
   }
 }
 
-
 /* ************************************************ */
 
-
-.slider{
+/* Slider */
+.slider {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow: hidden;
   position: relative;
 }
-.slider .list .item{
+
+/* List */
+.slider .list .item {
   width: 100%;
   height: 100%;
   position: absolute;
   inset: 0 0 0 0;
 }
-.slider .list .item img{
+
+/* Image inside item */
+.slider .list .item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-.slider .list .item .content{
+
+/* Content */
+.slider .list .item .content {
   position: absolute;
   top: 20%;
   width: 1140px;
@@ -453,23 +458,24 @@ body {
   text-shadow: 0 5px 10px #0004;
 }
 
+/* Title and Description */
 .slider .list .item .content .title,
-.slider .list .item .content .type{
+.slider .list .item .content .type {
   font-size: 5em;
   font-weight: bold;
   line-height: 1.3em;
 }
-.slider .list .item .type{
+.slider .list .item .type {
   color: #14ff72cb;
 }
-.slider .list .item .button{
+.slider .list .item .button {
   display: grid;
   grid-template-columns: repeat(2, 130px);
   grid-template-rows: 40px;
   gap: 5px;
   margin-top: 20px;
 }
-.slider .list .item .button button{
+.slider .list .item .button button {
   border: none;
   background-color: #eee;
   font-family: Poppins;
@@ -479,22 +485,17 @@ body {
   letter-spacing: 2px;
 }
 
-
-.slider .list .item .button button:hover{
+.slider .list .item .button button:hover {
   letter-spacing: 3px;
 }
-.slider .list .item .button button:nth-child(2){
+.slider .list .item .button button:nth-child(2) {
   background-color: transparent;
   border: 1px solid #fff;
   color: #eee;
 }
 
-
-
-
-
-/* Thumbnail Section  */
-.thumbnail{
+/* Thumbnail Section */
+.thumbnail {
   position: absolute;
   bottom: 50px;
   left: 50%;
@@ -504,14 +505,14 @@ body {
   gap: 20px;
 }
 
-.thumbnail .item{
+.thumbnail .item {
   width: 150px;
   height: 220px;
   flex-shrink: 0;
   position: relative;
 }
 
-.thumbnail .item img{
+.thumbnail .item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -519,9 +520,8 @@ body {
   box-shadow: 5px 0 15px rgba(0, 0, 0, 0.3);
 }
 
-
-/* nextPrevArrows Section  */
-.nextPrevArrows{
+/* nextPrevArrows Section */
+.nextPrevArrows {
   position: absolute;
   top: 80%;
   right: 52%;
@@ -532,7 +532,7 @@ body {
   gap: 10px;
   align-items: center;
 }
-.nextPrevArrows button{
+.nextPrevArrows button {
   width: 40px;
   height: 40px;
   border-radius: 50%;
@@ -541,53 +541,48 @@ body {
   color: #fff;
   font-family: monospace;
   font-weight: bold;
-  transition: .5s;
+  transition: 0.5s;
   cursor: pointer;
 }
-.nextPrevArrows button:hover{
+.nextPrevArrows button:hover {
   background-color: #fff;
   color: #000;
 }
 
 /* Animation Part */
-.slider .list .item:nth-child(1){
+.slider .list .item:nth-child(1) {
   z-index: 1;
 }
-
 
 /* animation text in first item */
 .slider .list .item:nth-child(1) .content .title,
 .slider .list .item:nth-child(1) .content .type,
 .slider .list .item:nth-child(1) .content .description,
-.slider .list .item:nth-child(1) .content .buttons
-{
+.slider .list .item:nth-child(1) .content .buttons {
   transform: translateY(50px);
   filter: blur(20px);
   opacity: 0;
-  animation: showContent .5s 1s linear 1 forwards;
+  animation: showContent 0.5s 1s linear 1 forwards;
 }
-@keyframes showContent{
-  to{
-      transform: translateY(0px);
-      filter: blur(0px);
-      opacity: 1;
+@keyframes showContent {
+  to {
+    transform: translateY(0px);
+    filter: blur(0px);
+    opacity: 1;
   }
 }
-.slider .list .item:nth-child(1) .content .title{
+.slider .list .item:nth-child(1) .content .title {
   animation-delay: 0.4s !important;
 }
-.slider .list .item:nth-child(1) .content .type{
+.slider .list .item:nth-child(1) .content .type {
   animation-delay: 0.6s !important;
 }
-.slider .list .item:nth-child(1) .content .description{
+.slider .list .item:nth-child(1) .content .description {
   animation-delay: 0.8s !important;
 }
-.slider .list .item:nth-child(1) .content .buttons{
+.slider .list .item:nth-child(1) .content .buttons {
   animation-delay: 1s !important;
 }
-
-
-
 
 /* Animation for next button click */
 .slider.next .list .item:nth-child(1) img {
@@ -597,7 +592,7 @@ body {
   bottom: 50px;
   left: 50%;
   border-radius: 30px;
-  animation: showImage .5s linear 1 forwards;
+  animation: showImage 0.5s linear 1 forwards;
 }
 
 @keyframes showImage {
@@ -610,87 +605,81 @@ body {
   }
 }
 
-.slider.next .thumbnail .item:nth-last-child(1){
+.slider.next .thumbnail .item:nth-last-child(1) {
   overflow: hidden;
-  animation: showThumbnail .5s linear 1 forwards;
+  animation: showThumbnail 0.5s linear 1 forwards;
 }
-.slider.prev .list .item img{
+.slider.prev .list .item img {
   z-index: 100;
 }
 
-
-@keyframes showThumbnail{
-  from{
-      width: 0;
-      opacity: 0;
+@keyframes showThumbnail {
+  from {
+    width: 0;
+    opacity: 0;
   }
 }
 
-
-.slider.next .thumbnail{
-  animation: effectNext .5s linear 1 forwards;
+.slider.next .thumbnail {
+  animation: effectNext 0.5s linear 1 forwards;
 }
 
-@keyframes effectNext{
-  from{
-      transform: translateX(150px);
+@keyframes effectNext {
+  from {
+    transform: translateX(150px);
   }
 }
-
-
 
 /* Animation for prev button click */
-.slider.prev .list .item:nth-child(2){
+.slider.prev .list .item:nth-child(1) {
   z-index: 2;
 }
 
-.slider.prev .list .item:nth-child(2) img{
+.slider.prev .list .item:nth-child(1) img {
   animation: outFrame 0.5s linear 1 forwards;
   position: absolute;
   bottom: 0;
   left: 0;
 }
-@keyframes outFrame{
-  to{
-      width: 150px;
-      height: 220px;
-      bottom: 50px;
-      left: 50%;
-      border-radius: 20px;
+@keyframes outFrame {
+  to {
+    width: 150px;
+    height: 220px;
+    bottom: 50px;
+    left: 50%;
+    border-radius: 20px;
   }
 }
 
-.slider.prev .thumbnail .item:nth-child(1){
+.slider.prev .thumbnail .item:nth-child(1) {
   overflow: hidden;
   opacity: 0;
-  animation: showThumbnail .5s linear 1 forwards;
+  animation: showThumbnail 0.5s linear 1 forwards;
 }
 .slider.next .nextPrevArrows button,
-.slider.prev .nextPrevArrows button{
+.slider.prev .nextPrevArrows button {
   pointer-events: none;
 }
 
+/* .slider.prev .list .item:nth-child(1) .content .title,
+.slider.prev .list .item:nth-child(1) .content .type,
+.slider.prev .list .item:nth-child(1) .content .description,
+.slider.prev .list .item:nth-child(1) .content .buttons {
+  animation: contentOut 0.5s linear 1 forwards !important;
+} */
 
-.slider.prev .list .item:nth-child(2) .content .title,
-.slider.prev .list .item:nth-child(2) .content .type,
-.slider.prev .list .item:nth-child(2) .content .description,
-.slider.prev .list .item:nth-child(2) .content .buttons
-{
-  animation: contentOut 1.5s linear 1 forwards!important;
-}
-
-@keyframes contentOut{
-  to{
-      transform: translateY(-150px);
-      filter: blur(20px);
-      opacity: 0;
+@keyframes contentOut {
+  to {
+    transform: translateY(-150px);
+    filter: blur(20px);
+    opacity: 0;
   }
 }
 @media screen and (max-width: 678px) {
-  .slider .list .item .content{
-      padding-right: 0;
+  .slider .list .item .content {
+    padding-right: 0;
   }
-  .slider .list .item .content .title{
-      font-size: 50px;
+  .slider .list .item .content .title {
+    font-size: 50px;
   }
 }
