our team design complete

--- a/app/globals.css
+++ b/app/globals.css
@@ -423,6 +423,7 @@ body {
 
 /* Slider */
 .slider {
+  /* height: 100vh; */
   height: 100vh;
   width: 100%;
   overflow: hidden;
@@ -437,67 +438,17 @@ body {
   inset: 0 0 0 0;
 }
 
+
 /* Image inside item */
 .slider .list .item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
 }
-
-/* Content */
-.slider .list .item .content {
-  position: absolute;
-  top: 20%;
-  width: 1140px;
-  max-width: 80%;
-  left: 50%;
-  transform: translateX(-50%);
-  padding-right: 30%;
-  box-sizing: border-box;
-  color: #fff;
-  text-shadow: 0 5px 10px #0004;
-}
-
-/* Title and Description */
-.slider .list .item .content .title,
-.slider .list .item .content .type {
-  font-size: 5em;
-  font-weight: bold;
-  line-height: 1.3em;
-}
-.slider .list .item .type {
-  color: #14ff72cb;
-}
-.slider .list .item .button {
-  display: grid;
-  grid-template-columns: repeat(2, 130px);
-  grid-template-rows: 40px;
-  gap: 5px;
-  margin-top: 20px;
-}
-.slider .list .item .button button {
-  border: none;
-  background-color: #eee;
-  font-family: Poppins;
-  font-weight: 500;
-  cursor: pointer;
-  transition: 0.4s;
-  letter-spacing: 2px;
-}
-
-.slider .list .item .button button:hover {
-  letter-spacing: 3px;
-}
-.slider .list .item .button button:nth-child(2) {
-  background-color: transparent;
-  border: 1px solid #fff;
-  color: #eee;
-}
-
 /* Thumbnail Section */
 .thumbnail {
   position: absolute;
-  bottom: 50px;
+  bottom: 20px;
   left: 50%;
   width: max-content;
   z-index: 100;
@@ -507,16 +458,16 @@ body {
 
 .thumbnail .item {
   width: 150px;
-  height: 220px;
+  height: 180px;
   flex-shrink: 0;
   position: relative;
 }
 
-.thumbnail .item img {
+.thumbnail .item img   {
   width: 100%;
   height: 100%;
-  object-fit: cover;
-  border-radius: 20px;
+   border-radius: 20px;
+  object-fit: cover; 
   box-shadow: 5px 0 15px rgba(0, 0, 0, 0.3);
 }
 
@@ -524,7 +475,7 @@ body {
 .nextPrevArrows {
   position: absolute;
   top: 80%;
-  right: 52%;
+  left: 4%;
   z-index: 100;
   width: 300px;
   max-width: 30%;
@@ -536,7 +487,7 @@ body {
   width: 40px;
   height: 40px;
   border-radius: 50%;
-  background-color: #14ff72cb;
+  background-color: #4169E1;
   border: none;
   color: #fff;
   font-family: monospace;
@@ -553,38 +504,6 @@ body {
 .slider .list .item:nth-child(1) {
   z-index: 1;
 }
-
-/* animation text in first item */
-.slider .list .item:nth-child(1) .content .title,
-.slider .list .item:nth-child(1) .content .type,
-.slider .list .item:nth-child(1) .content .description,
-.slider .list .item:nth-child(1) .content .buttons {
-  transform: translateY(50px);
-  filter: blur(20px);
-  opacity: 0;
-  animation: showContent 0.5s 1s linear 1 forwards;
-}
-@keyframes showContent {
-  to {
-    transform: translateY(0px);
-    filter: blur(0px);
-    opacity: 1;
-  }
-}
-.slider .list .item:nth-child(1) .content .title {
-  animation-delay: 0.4s !important;
-}
-.slider .list .item:nth-child(1) .content .type {
-  animation-delay: 0.6s !important;
-}
-.slider .list .item:nth-child(1) .content .description {
-  animation-delay: 0.8s !important;
-}
-.slider .list .item:nth-child(1) .content .buttons {
-  animation-delay: 1s !important;
-}
-
-/* Animation for next button click */
 .slider.next .list .item:nth-child(1) img {
   width: 150px;
   height: 220px;
@@ -635,13 +554,13 @@ body {
   z-index: 2;
 }
 
-.slider.prev .list .item:nth-child(1) img {
-  animation: outFrame 0.5s linear 1 forwards;
+.slider.prev .list .item:nth-child(2) img {
+  animation: showImagePrev 0.5s linear 1 forwards;
   position: absolute;
   bottom: 0;
   left: 0;
 }
-@keyframes outFrame {
+@keyframes showImagePrev {
   to {
     width: 150px;
     height: 220px;
@@ -654,32 +573,26 @@ body {
 .slider.prev .thumbnail .item:nth-child(1) {
   overflow: hidden;
   opacity: 0;
-  animation: showThumbnail 0.5s linear 1 forwards;
+  animation: showThumbnailPrev 0.5s linear 1 forwards;
 }
 .slider.next .nextPrevArrows button,
 .slider.prev .nextPrevArrows button {
   pointer-events: none;
 }
-
-/* .slider.prev .list .item:nth-child(1) .content .title,
-.slider.prev .list .item:nth-child(1) .content .type,
-.slider.prev .list .item:nth-child(1) .content .description,
-.slider.prev .list .item:nth-child(1) .content .buttons {
-  animation: contentOut 0.5s linear 1 forwards !important;
-} */
-
-@keyframes contentOut {
-  to {
-    transform: translateY(-150px);
-    filter: blur(20px);
+@keyframes showThumbnailPrev {
+  from {
+    width: 0;
     opacity: 0;
   }
 }
-@media screen and (max-width: 678px) {
-  .slider .list .item .content {
-    padding-right: 0;
-  }
-  .slider .list .item .content .title {
-    font-size: 50px;
+
+.slider.prev .thumbnail {
+  animation: effectPrev 0.5s linear 1 forwards;
+}
+
+@keyframes effectPrev {
+  from {
+    transform: translateX(-150px);
   }
 }
+
